Fixed gamemodes list on small screen resolutions

--- a/garrysmod/html/css/menu/Servers.css
+++ b/garrysmod/html/css/menu/Servers.css
@@ -401,10 +401,17 @@ SPAN.installgamemode:hover
 
 .server_gamemodes
 {
-	margin-right: 300px; 
-	margin-left: 300px; 
 	top: 64px; 
 	border: 5px solid white;
+}
+
+@media screen and (min-width: 1280px)
+{
+	.server_gamemodes {
+		margin: 0 auto;
+		width: 80%;
+		max-width: 1000px;
+	}
 }
 
 .noplayers
